# django-rest-urltoken-auth

./: LICENSE  README.md  README.rst  setup.cfg
django_rest_urltoken_auth/: admin.py  apps.py  authentication.py  models.py  permissions.py
django_rest_urltoken_auth/migrations/: 0001_initial.py
django_rest_urltoken_auth/tests/: __init__.py  tests.py
