[metadata]
name = django-rest-urltoken-auth
version = 0.1.0
description = Django REST app to allow authentication with url tokens
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/project-cece/django-rest-urltoken-auth
author = Marcella Wijngaarden
author_email = marcellawijngaarden@hotmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
